--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
+        buildConfigField "String", 'BASE_URL', "\"https://travelyours-api-4zcm2uhcpq-as.a.run.app\""
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -24,6 +25,7 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
 
@@ -33,31 +35,74 @@ android {
     }
     buildFeatures{
         compose true
+        mlModelBinding true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.3'
+        kotlinCompilerExtensionVersion '1.4.1'
     }
 }
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core:1.10.1'
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.6.0'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
+    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
+    implementation 'androidx.datastore:datastore-core:1.0.0'
+    implementation 'androidx.datastore:datastore-preferences-core:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    //compose
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
     implementation 'androidx.activity:activity-compose:1.7.2'
-    implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation 'androidx.compose.animation:animation:1.4.3'
+    implementation "androidx.navigation:navigation-compose:2.6.0"
     implementation "androidx.compose.ui:ui:1.4.3"
     implementation "androidx.compose.material3:material3:1.1.0"
+    implementation "androidx.compose.material:material:1.4.3"
     implementation "androidx.compose.ui:ui-graphics:1.4.3"
     implementation "androidx.compose.ui:ui-tooling-preview:1.4.3"
+    implementation "androidx.compose.runtime:runtime:1.4.3"
+    implementation "androidx.compose.runtime:runtime-livedata:1.4.3"
+    //Coil
+    implementation "io.coil-kt:coil-compose:1.4.0"
+    //livedata
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-runtime:2.6.1"
+    //navigation
+    implementation "androidx.navigation:navigation-ui-ktx:2.6.0"
+    //materialdialog
+    implementation "io.github.vanpra.compose-material-dialogs:datetime:0.8.1-rc"
 
-implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
+    //camera
+    implementation "androidx.camera:camera-camera2:1.2.3"
+    implementation "androidx.camera:camera-lifecycle:1.2.3"
+    implementation "androidx.camera:camera-view:1.2.3"
 
+    //Network
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.11'
+
+    // TensorFlow
+    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
+    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
+    //Data Store
+    implementation "androidx.datastore:datastore-core:1.0.0"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation 'com.airbnb.android:lottie:6.0.0'
+    coreLibraryDesugaring'com.android.tools:desugar_jdk_libs:2.0.3'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.3"
     debugImplementation "androidx.compose.ui:ui-tooling:1.4.3"
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.4.3"
+
+    //generate json
+    implementation 'com.sealwu.jsontokotlin:library:3.7.4'
 }
